Fix spacing between dt and dd in glossary

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -328,6 +328,7 @@
 }
 .quire-page__content .content dl.quire-glossary dt {
   display: inline;
+  margin-right: .3rem
 }
 .quire-page__content .content dl.quire-glossary dd {
   display: inline;
